--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     nostr-rs-relay:
       container_name: nostr-rs-relay
       image: scsibug/nostr-rs-relay:latest
-      volumes:
-        - /home/ubuntu/nostr/config.toml:/usr/src/app/config.toml
-        - /home/ubuntu/nostr/data:/usr/src/app/db
+#      volumes:
+#        - /home/ubuntu/nostr/config.toml:/usr/src/app/config.toml
+#        - /home/ubuntu/nostr/data:/usr/src/app/db
       restart: always
       #ports:
       #  - 7000:8080
