--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -5,17 +5,15 @@ services:
         image: pastagringo/nostr-relay-nginx-proxy:latest
         environment:
             LINK_DOMAIN_DEFAULT: $LINK_DOMAIN_DEFAULT
-    
     nostr-rs-relay:
       container_name: nostr-rs-relay
       image: scsibug/nostr-rs-relay:latest
-#      volumes:
-#        - /home/ubuntu/nostr/config.toml:/usr/src/app/config.toml
-#        - /home/ubuntu/nostr/data:/usr/src/app/db
+      volumes:
+        - /home/ubuntu/nostr/config.toml:/usr/src/app/config.toml
+        - /home/ubuntu/nostr/data:/usr/src/app/db
       restart: always
       #ports:
       #  - 7000:8080
-    
     link:
       image: fractalnetworks/link:latest
       environment:
@@ -27,7 +25,6 @@ services:
         - NET_ADMIN
       volumes:
         - fractal-link-volume:/root/.local/share/caddy
-        
 volumes:
 #  fractal-app-volume:
 #    external: true
