--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.9'
 services:
-
     nginx:
       image: pastagringo/nostr-relay-nginx-proxy:latest
       environment:
@@ -14,7 +13,7 @@ services:
         - DESCRIPTION=Relay built with ENV vars!
         - PUBKEY=myownpubkey
         - CONTACT=contact@gmail.com
-        - PORT=8000
+        - PORT=8080
         - NIP05=enabled
       volumes:
         - fractal-app-volume:/usr/src/app/db
@@ -23,7 +22,7 @@ services:
       environment:
         LINK: $LINK_DOMAIN_DEFAULT
         TOKEN: $LINK_TOKEN_DEFAULT
-        EXPOSE: nostr-rs-relay-fractal:8000
+        EXPOSE: nginx:8080
         FRACTAL_API: https://gateway.fractalnetworks.co
       cap_add:
         - NET_ADMIN
