--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
     nginx:
-        container_name: nginx-nostr-fractal
+        container_name: nostr-relay-nginx-fractal
         image: pastagringo/nostr-relay-nginx-proxy:latest
         environment:
             LINK_DOMAIN_DEFAULT: $LINK_DOMAIN_DEFAULT        
