--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.9'
 services:
-    nginx:
+    nostr-relay-nginx-fractal:
         container_name: nostr-relay-nginx-fractal
         image: pastagringo/nostr-relay-nginx-proxy:latest
         environment:
             LINK_DOMAIN_DEFAULT: $LINK_DOMAIN_DEFAULT        
-    nostr-rs-relay:
-      container_name: nostr-rs-relay
+    nostr-rs-relay-fractal:
+      container_name: nostr-rs-relay-fractal
       image: pastagringo/nostr-rs-relay-fractal:latest
       environment:
         - RELAY_URL=$LINK_DOMAIN_DEFAULT
@@ -18,13 +18,13 @@ services:
         - NIP05=enabled
       volumes:
         - fractal-app-volume:/usr/src/app/db
-    link:
+    nostr-rs-relay-fractal-link:
       container_name: nostr-rs-relay-fractal-link
       image: fractalnetworks/link:latest
       environment:
         LINK: $LINK_DOMAIN_DEFAULT
         TOKEN: $LINK_TOKEN_DEFAULT
-        EXPOSE: nginx:80
+        EXPOSE: nostr-relay-nginx-fractal:80
         FRACTAL_API: https://gateway.fractalnetworks.co
       cap_add:
         - NET_ADMIN
