--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         - PUBKEY=npub1ky4kxtyg0uxgw8g5p5mmedh8c8s6sqny6zmaaqj44gv4rk0plaus3m4fd2
         - CONTACT=pastagringo@skiff.com
         - PORT=8080
-        - NIP05=enabled
+        #- NIP05=enabled
       volumes:
         - fractal-app-volume:/usr/src/app/db
     link:
