--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -16,8 +16,8 @@ services:
         - CONTACT=pastagringo@skiff.com
         - PORT=8080
         #- NIP05=enabled
-      volumes:
-        - fractal-app-volume:/usr/src/app/db
+#      volumes:
+#        - fractal-app-volume:/usr/src/app/db
     link:
       container_name: nostr-rs-relay-fractal-link
       image: fractalnetworks/link:latest
@@ -31,9 +31,9 @@ services:
       volumes:
         - fractal-link-volume:/root/.local/share/caddy
 volumes:
-  fractal-app-volume:
-    external: true
-    name: $APP_VOLUME_NAME
+#  fractal-app-volume:
+#    external: true
+#    name: $APP_VOLUME_NAME
   fractal-link-volume:
     external: true
     name: $LINK_VOLUME_NAME
