--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -4,7 +4,9 @@ services:
         container_name: nostr-nginx-fractal
         image: pastagringo/nostr-nginx-fractal:latest
         environment:
-            LINK_DOMAIN_DEFAULT: $LINK_DOMAIN_DEFAULT        
+            LINK_DOMAIN_DEFAULT: $LINK_DOMAIN_DEFAULT
+            USERNAME: pastagringo
+            HEXKEY: b12b632c887f0c871d140d37bcb6e7c1e1a80264d0b7de8255aa1951d9e1ff79
     nostr-relay-fractal:
       container_name: nostr-relay-fractal
       image: pastagringo/nostr-relay-fractal:latest
