--- a/no/st/nostr-relay/docker-compose.yml
+++ b/no/st/nostr-relay/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         - PUBKEY=b12b632c887f0c871d140d37bcb6e7c1e1a80264d0b7de8255aa1951d9e1ff79
         - CONTACT=pastagringo@skiff.com
         - PORT=8080
+        - FAVICON_URL=https://www.linkpicture.com/q/favicon_78.ico
     link:
       container_name: nostr-relay-fractal-link
       image: fractalnetworks/link:latest
